# C_Utility_lib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: crc.h  cutil.h  dynamicArray.h  keyMap.h  key_map.h  linkedLists.h  linked_lists.h  log.h  manchester.h  stringStruct.h  string_struct.h  thread.h  typedef.h  vector.h
src/: CMakeLists.txt  crc.c  dynamicArray.c  keyMap.c  key_map.c  linkedLists.c  linkedLists.h  linked_lists.c  log.c  main.c  manchester.c  stringStruct.c  string_struct.c  thread.c  vector.c
